tests/ui/macros/macro-missing-fragment-deduplication.stderr
error: missing fragment specifier
  --> $DIR/macro-missing-fragment-deduplication.rs:4:6
   |
LL |     ($name) => {};
   |      ^^^^^
   |
   = note: fragment specifiers must be specified in the 2024 edition
   = help: valid fragment specifiers are `ident`, `block`, `stmt`, `expr`, `expr_2021`, `pat`, `ty`, `lifetime`, `literal`, `path`, `meta`, `tt`, `item` and `vis`
help: try adding a specifier here
   |
LL |     ($name:spec) => {};
   |           +++++

error: missing fragment specifier
  --> $DIR/macro-missing-fragment-deduplication.rs:4:6
   |
LL |     ($name) => {};
   |      ^^^^^

error: aborting due to 2 previous errors

